{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 287,
  "lineage": "eb3bbbc5-62da-a552-cdf2-24849fa5b8ba",
  "resources": [
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "back_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:468406663760:loadbalancer/app/back-alb/5845cca51d5cf869",
            "arn_suffix": "app/back-alb/5845cca51d5cf869",
            "desync_mitigation_mode": "defensive",
            "dns_name": "back-alb-1033757045.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:468406663760:loadbalancer/app/back-alb/5845cca51d5cf869",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "back-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c5821349a262256e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0333991ee11a18146"
              },
              {
                "subnet_id": "subnet-04ed53ae50ff51dea"
              },
              {
                "subnet_id": "subnet-0bfc6c222a1e971cf"
              },
              {
                "subnet_id": "subnet-0d6bbda4f4d0f6285"
              },
              {
                "subnet_id": "subnet-0dfc47d4904958e09"
              },
              {
                "subnet_id": "subnet-0f70e0e2a29b6e553"
              }
            ],
            "subnets": [
              "subnet-0333991ee11a18146",
              "subnet-04ed53ae50ff51dea",
              "subnet-0bfc6c222a1e971cf",
              "subnet-0d6bbda4f4d0f6285",
              "subnet-0dfc47d4904958e09",
              "subnet-0f70e0e2a29b6e553"
            ],
            "vpc_id": "vpc-0c1080e22e4127001",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "front_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:468406663760:loadbalancer/app/front-alb/0c36389cf3651651",
            "arn_suffix": "app/front-alb/0c36389cf3651651",
            "desync_mitigation_mode": "defensive",
            "dns_name": "front-alb-7872289.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:468406663760:loadbalancer/app/front-alb/0c36389cf3651651",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "front-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c5821349a262256e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0333991ee11a18146"
              },
              {
                "subnet_id": "subnet-04ed53ae50ff51dea"
              },
              {
                "subnet_id": "subnet-0bfc6c222a1e971cf"
              },
              {
                "subnet_id": "subnet-0d6bbda4f4d0f6285"
              },
              {
                "subnet_id": "subnet-0dfc47d4904958e09"
              },
              {
                "subnet_id": "subnet-0f70e0e2a29b6e553"
              }
            ],
            "subnets": [
              "subnet-0333991ee11a18146",
              "subnet-04ed53ae50ff51dea",
              "subnet-0bfc6c222a1e971cf",
              "subnet-0d6bbda4f4d0f6285",
              "subnet-0dfc47d4904958e09",
              "subnet-0f70e0e2a29b6e553"
            ],
            "vpc_id": "vpc-0c1080e22e4127001",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb_listener",
      "name": "back_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:468406663760:listener/app/back-alb/5845cca51d5cf869/e1c533af22030bdb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:468406663760:targetgroup/back-tgn/e19b635dcfb17fe2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:468406663760:listener/app/back-alb/5845cca51d5cf869/e1c533af22030bdb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:468406663760:loadbalancer/app/back-alb/5845cca51d5cf869",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb_listener",
      "name": "front_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:468406663760:listener/app/front-alb/0c36389cf3651651/ad9275f9bd9f8b45",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:468406663760:targetgroup/front-tgn/7d287e365534c1ef",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:468406663760:listener/app/front-alb/0c36389cf3651651/ad9275f9bd9f8b45",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:468406663760:loadbalancer/app/front-alb/0c36389cf3651651",
            "port": 4200,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb_listener",
      "name": "kong_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:468406663760:listener/app/front-alb/0c36389cf3651651/cefa4624526dd9fb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:468406663760:targetgroup/kong-tgn/f34cefc219e4c4be",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:468406663760:listener/app/front-alb/0c36389cf3651651/cefa4624526dd9fb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:468406663760:loadbalancer/app/front-alb/0c36389cf3651651",
            "port": 8000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "back_tgn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:468406663760:targetgroup/back-tgn/e19b635dcfb17fe2",
            "arn_suffix": "targetgroup/back-tgn/e19b635dcfb17fe2",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/alive",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:468406663760:targetgroup/back-tgn/e19b635dcfb17fe2",
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "back-tgn",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c1080e22e4127001"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "front_tgn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:468406663760:targetgroup/front-tgn/7d287e365534c1ef",
            "arn_suffix": "targetgroup/front-tgn/7d287e365534c1ef",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/alive",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:468406663760:targetgroup/front-tgn/7d287e365534c1ef",
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "front-tgn",
            "port": 4200,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c1080e22e4127001"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "kong_tgn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:468406663760:targetgroup/kong-tgn/f34cefc219e4c4be",
            "arn_suffix": "targetgroup/kong-tgn/f34cefc219e4c4be",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/alive",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:468406663760:targetgroup/kong-tgn/f34cefc219e4c4be",
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "kong-tgn",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c1080e22e4127001"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default_sec_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:468406663760:security-group/sg-0c5821349a262256e",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0c5821349a262256e",
            "name": "default",
            "tags": {
              "Name": "default-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1080e22e4127001"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:468406663760:vpc/vpc-0c1080e22e4127001",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c2b3fedc86dcf06a",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0c70fdfcd99f13bdd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c1080e22e4127001",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06edbf7d184bb2fc9",
            "owner_id": "468406663760"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}